syntax = "proto3";
package chat_server_user;

option csharp_namespace = "GRPCChatServerUser";


service ChatServerUser {
  rpc GetUser (UserRequest) returns (UserReply);
}

message UserRequest {
  string id = 1;
}

message UserReply {
  string id = 1;
  string username = 2;
}
